# CloudBrain_Yang

./: .gitignore  README.md  docker-compose.yml  error.txt  hospital_cloud_brain.sql  hospital_cloud_brain_data.sql  pom.xml  【FY26方案】东北大学-东软教育-云脑诊疗平台项目实训方案-v5.2.doc  东软智慧云脑诊疗平台_数据库建表语句文档.docx  技术栈.md
ai-service/: .env  .env.example  .gitignore  Dockerfile  README.md  dev.sh  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/clients/: glm_client.py
ai-service/app/rag/: __init__.py  rag_service.py
ai-service/app/routers/: medical_record.py  prescription.py  triage.py
ai-service/app/schemas/: medical_record.py  prescription.py  triage.py
ai-service/app/services/: medical_record_service.py  prescription_service.py  triage_service.py
ai-service/knowledge/: general-clinical-guidance.md
docker/mysql/: my.cnf
docker/mysql/init/: 01-init-schema.sql  02-triage-record.sql  (+3 more)
docker/redis/: redis.conf
docs/: AI处方审核前端对接.md  AI接入实现思路.md  AI接入实现日志.md  AI病历生成前端对接.md  AI诊前分诊前端对接.md  deployment-runbook.md  前端挂号接口对接.md  前端登录鉴权对接.md
sql/: au.sql  remote_schema_sync_v2_20260702.sql  seed_clear_all_data.sql  seed_data.sql  v1.0_init_schema.sql  v1.1_auth_rbac_migration.sql  v1.1_auth_rbac_verify.sql  v1.1_triage_record.sql  v1.2_account_lifecycle_migration.sql  v1.2_account_lifecycle_verify.sql  v1.2_prescription_audit_record.sql  v1.3_medical_record_source.sql  v1.4_register_harden.sql  v1.5_registration_quota.sql  v2.0_identity_schema_migration.sql  v2.0_identity_schema_verify.sql  v2.2_ai_schema_migration.sql  v2.2_ai_schema_verify.sql
(+241 files in other folders)
