[project]
name = "hospital-ai-service"
version = "0.1.0"
description = "Hospital AI inference service (triage / prescription audit / medical record) backed by GLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "zhipuai>=2.1",
    "httpx>=0.27",
    "sniffio>=1.3.1",
]

[tool.uv]
package = false
